--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.10",
+    "@tailwindcss/forms": "^0.3.3",
+    "graphql": "^15.5.2",
+    "keen-slider": "^5.5.1",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "^17.0.2",
+    "react-countup": "^5.2.0",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
