--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.10",
+    "@headlessui/react": "^1.4.1",
     "@tailwindcss/forms": "^0.3.3",
-    "graphql": "^15.5.2",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "graphql": "^15.5.3",
+    "html2json": "^1.0.2",
     "keen-slider": "^5.5.1",
     "moment": "^2.29.1",
     "next": "latest",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-countup": "^5.2.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-indiana-drag-scroll": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
