--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.10",
     "@headlessui/react": "^1.4.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
-    "graphql": "^15.5.3",
-    "html2json": "^1.0.2",
+    "gray-matter": "^4.0.3",
     "keen-slider": "^5.5.1",
     "moment": "^2.29.1",
     "next": "latest",
@@ -19,7 +17,9 @@
     "react": "^17.0.2",
     "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
-    "react-indiana-drag-scroll": "^2.0.1"
+    "react-indiana-drag-scroll": "^2.0.1",
+    "remark": "13.0.0",
+    "remark-html": "13.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
