--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-indiana-drag-scroll": "^2.0.1",
     "react-lottie": "^1.2.3",
     "react-redux": "^7.2.6",
+    "react-select": "^5.2.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0"
