--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
         "paths": {
             "@components/*":["components/*"],
             "@util/*":["util/*"],
+            "@redux/*":["redux/*"],
         }
     }
 }
