--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.3.2",
     "jspdf": "^2.4.0",
     "keen-slider": "^5.5.1",
+    "lottie-react": "^2.4.0",
     "moment": "^2.29.1",
     "next": "latest",
     "nprogress": "^0.2.0",
@@ -23,7 +24,6 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.23.0",
     "react-indiana-drag-scroll": "^2.0.1",
-    "react-lottie": "^1.2.3",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.1",
     "redux": "^4.1.2",
