--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "keen-slider": "^5.5.1",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.1",
-    "next": "latest",
+    "next": "12.1.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-countup": "^5.2.0",
